#011 fixed the spacing btw icons
fixed the space between the font-awesome icon and the text.

--- a/style.css
+++ b/style.css
@@ -245,4 +245,9 @@
 	padding-top: 50px;
 	padding-left:85%;
 }
+
+i {
+  display: inline-block;
+  margin-right: 1em;
+}
 	
